globo_web_app/loadbalancer.tf
resource "aws_lb" "nginx" {
  name                       = "globo-web-alb"
  internal                   = false
  load_balancer_type         = "application"
  security_groups            = [aws_security_group.nginx_sg.id]
  subnets                    = [for x in aws_subnet.public_subnets : x.id]
  depends_on                 = [aws_s3_bucket_policy.web_bucket]
  enable_deletion_protection = false

  access_logs {
    bucket  = aws_s3_bucket.s3bucket.bucket
    prefix  = "alb-logs"
    enabled = true

  }

  tags = local.common_tags

}

resource "aws_lb_target_group" "nginx" {
  name     = "nginx-alb-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.app.id
  tags     = local.common_tags
}

resource "aws_lb_listener" "nginx" {
  load_balancer_arn = aws_lb.nginx.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.nginx.arn
  }
  tags = local.common_tags
}


resource "aws_lb_target_group_attachment" "aws-tg-attach" {
  count            = var.instance_count
  target_group_arn = aws_lb_target_group.nginx.arn
  target_id        = aws_instance.nginx[count.index].id
  port             = 80
}
